This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

15-Oct-2001 (Lars Duening)  (3.3.115)
    - (interpret.c) Another error in call_other() on arrays of objects.
        (reported by Dafire)
    - (call_out.c) The minimum delay can now be 0 (suggested by Tomba).

14-Oct-2001 (Lars Duening)  (3.3.114)
    - (efuns.c) Removed a free-memory access in efun strstr() (thanks,
        Tomba!)
    - (Makefiles) Updated my MkDepend tool, so that it no longer adds
        non-existing include files to the dependencies.
    - (interpret.c) Oops, call_other()/call_direct() on array of objects
        always used default functions even if they shouldn't. This also
        caused the double freeing of svalues. (reported by Dafire)
    - (interpret.c, swap.c, xalloc) Didn't compile when using sysmalloc
        as allocator (reported by Tomba).

12-Oct-2001 (Lars Duening)  (3.3.113)
    - (sprintf.c) Improved the flushing algorithm: spaces are more
        evenly distributed, newlines in columns didn't work properly
        (reported by Slava).
    - (make_func, func_spec, interpret, simulate, lex) Implemented
        the optional H_DEFAULT_METHOD driver hook to implement
        default methods for unresolved calls.
    - (lots of files) Renamed closure_hook[] to the more sensical
        driver_hook[]. And got rid of USE_FREE_CLOSURE_HOOK.
    - (erq, xerq) Erq now accepts an '--execdir' argument to override
        the default ERQ_DIR setting (suggested by Freaky).
    - (main, comm.c) It is now possible to pass simple arguments to the
        erq with the --erq commandline option (suggested by Freaky).

11-Oct-2001 (Lars Duening)  (3.3.112)
    - (sprintf.c) New formatting modifier '$' allows flush formatting
        of strings and columns of strings (f-010717).
    - (interpret.c) Added the apply framework for default methods.

10-Oct-2001 (Lars Duening)  (3.3.111)