@@ -3,6 +3,7 @@ From: Slava Ignatjev
 Date: 2001-10-15
 Type: Feature
 State: New
+See also: f-011016-0
 
 Okay, I suggest to change format of the fun a bit, to the following:
 
