@@ -1,9 +1,0 @@
-Short: set_auto_include_string() should accept a closure
-Date: 2001-10-16
-From: Lars
-Type: Feature
-State: New
-
-set_auto_include_string() should accept a closure which is called with the
-current compiled file and the current including file as arguments and returns
-the string to auto-include.
