@@ -2,7 +2,7 @@ Subject: Neue efun csprintf()
 From: Lars Duning <lduning@peopledoc.com>
 Date: Tue, 09 Mar 1999 18:30:40 +0000
 Type: Feature
-State: Acknowledged.
+State: Superceded by f-011016-0.
 See also: f-010223
 
 Merge terminal_colour() into sprintf(), creating a new efun
