@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+17-Oct-2001 (Lars Duening)  (3.3.116)
+   - (interpret.c) I had to deactivate the tests against assignments
+        to negative ranges - this feature is in fact in use (thanks,
+        Coogan and Alfe - and sorry for breaking TubMud!).
+
 15-Oct-2001 (Lars Duening)  (3.3.115)
     - (interpret.c) Another error in call_other() on arrays of objects.
         (reported by Dafire)
